--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 body {
-	background-color: #feffef;
+	background-color: #ffffff;
 }
 section {
 	display: flex;
@@ -31,7 +31,7 @@ section {
 }
 h1 {
 	color: #112233;
-	font-size: 4rem;
+	font-size: 3rem;
 	font-weight: 100;
 	box-shadow: -0.5rem -0.5rem 0.1rem #715965, 0.5rem 0.5rem 0.1rem #715965;
 }
@@ -48,13 +48,23 @@ h1 {
 	justify-content: space-between;
 	align-items: center;
 }
+#difficulty {
+	min-width: 5rem;
+	font-size: 1.5rem;
+	color: #112233;
+	align-self: flex-end;
+	margin-right: 3rem;
+	/* padding: 0.2rem 0.3rem; */
+	outline: none;
+	border: 1px solid #333;
+}
 
 .main #colors {
 	width: 100%;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	margin: 1.5rem;
+	margin: 1.2rem;
 }
 
 .btn {
@@ -62,9 +72,7 @@ h1 {
 	aspect-ratio: 1;
 	border-radius: 50%;
 	cursor: pointer;
-	border-style: solid;
-	border-width: 3px;
-	border-color: black;
+	border: 1px solid #fff;
 }
 
 #replay {
@@ -77,4 +85,19 @@ h1 {
 	cursor: pointer;
 	border: 1px solid #112233;
 	border-radius: 0.8rem;
+	box-shadow: 0 0 5px 5px rgba(100, 100, 100, 0.4);
+}
+#replay:hover {
+	transform: scale(1.2);
+	box-shadow: none;
+}
+/* #replay:focus {
+	transform: scale(0.9);
+} */
+
+.correct {
+	box-shadow: 0 0 10px 10px rgba(10, 255, 50, 0.6);
+}
+.wrong {
+	box-shadow: 0 0 10px 10px rgba(255, 50, 50, 0.6);
 }
